--- a/src/index.css
+++ b/src/index.css
@@ -15,15 +15,20 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --headerColor: #2d728f;
+  --headerButtonsSelected: #3b8ea5;
+  --webPageBodyBackground: #f5ee9e;
+  --webPageContainerBody: #f49e4c;
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: whitesmoke;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: whitesmoke;
 }
 
 body {
@@ -32,6 +37,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: rgb(254 243 199);
 }
 
 h1 {
@@ -51,7 +57,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: whitesmoke;
 }
 button:focus,
 button:focus-visible {
@@ -64,7 +70,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: black;
   }
   button {
     background-color: #f9f9f9;
