--- a/src/index.css
+++ b/src/index.css
@@ -41,13 +41,24 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  display: block;
+  font-size: 2em;
+  font-weight: bold;
+}
+h2 {
+  display: block;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+h3 {
+  display: block;
+  font-size: 1.17em;
+  font-weight: bold;
 }
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1px solid black;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -62,6 +73,9 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+.selectedButton{
+  background-color: var(--headerButtonsSelected);
 }
 
 @media (prefers-color-scheme: light) {
