--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,6 @@ h3 {
 
 button {
   border-radius: 8px;
-  border: 1px solid black;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -68,11 +67,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: whitesmoke;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  color: var(--webPageContainerBody);
 }
 .selectedButton{
   background-color: var(--headerButtonsSelected);
@@ -84,9 +79,6 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: black;
-  }
-  button {
-    background-color: #f9f9f9;
+    color: var(--webPageContainerBody) ;
   }
 }
